# parking-4-wheel-steering

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/map/: parking_decorations.npy  parking_obstacles.npy
lib/: OMPL.py  mpc.py  parking.py  plot.py  plot_mpc.py
lib/mpc/: mpc.py  trajectory.py
scripts/: map_generate.py  parking_main.py  run_mpc.py
tests/: test_run_mpc.py
